src/auryn/tests/snapshots/auryn__auryn__tests__ui@argument_count_mismatch_over.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n    bar(1, 2)\n}\n\nfn bar(value: Number) {}"
input_file: src/auryn/tests/inputs/ui/argument_count_mismatch_over.au
---
Error: Mismatched argument count
   ╭─[ main:2:5 ]
   │
 5 │ fn bar(value: Number) {}
   │       ────────┬───────  
   │               ╰───────── Due to the definition here
   │
   ├─[ main:2:5 ]
   │
 2 │     bar(1, 2)
   │     ─┬─  
   │      ╰─── Expected 1 argument, but got 2
───╯
